<resources>
    <string name="app_home">首页</string>
    <string name="title">标题</string>
    <string name="app_report">报表</string>
    <string name="app_user">个人中心</string>
    <string name="app_name">爱生产</string>
    <string name="data_empty">空空如也</string>
    <string name="error_network">网络错误点击重试</string>
    <string name="error_request">请求出错，点击重试</string>
    <string name="home_problem">首页界面一片空白没有选项卡？</string>
    <string name="home_problem_content">
        本软件每个用户都有其不同的权限，您只能查看到对应权限的选项卡，
        出现空白的情况应该是您的权限并没有加入本软件清单中
    </string>
    <string name="mpr_problem">孔图查看使用</string>
    <string name="mpr_problem_content">
        孔图查看界面右侧隐藏有侧边栏，可通过右侧向左滑动呼出菜单。
        使用者手机开启”全面屏手势“时，可通过右上角向左滑动呼出菜单
    </string>
    <string name="submit">提交</string>
    <string name="plate_code">板件编码：</string>
    <string name="materials">材料：</string>
    <string name="mat_name">颜色：</string>
    <string name="mat_name_">颜色</string>
    <string name="f_leng">完工长：</string>
    <string name="f_leng_">完工长</string>
    <string name="f_width">完工宽：</string>
    <string name="f_width_">完工宽</string>
    <string name="k_leng">开料长：</string>
    <string name="k_width">开料宽：</string>
    <string name="thk">厚度：</string>
    <string name="thk_">厚</string>
    <string name="area">面积：</string>
    <string name="price">单价：</string>
    <string name="amount">金额：</string>
    <string name="to_fill_in_type">改补类型：</string>
    <string name="cause">原因：</string>
    <string name="discoverer">发现人：</string>
    <string name="post_responsibility">责任岗位：</string>
    <string name="responsible">责任人：</string>
    <string name="planNo">批次号：</string>
    <string name="plan_data">计划完成时间：</string>
    <string name="op_name">工序</string>
    <string name="operation_date">操作日期</string>
    <string name="operation_name">操作人</string>
    <string name="operation_group">操作组</string>
    <string name="identify_qr">识别二维码：</string>
    <string name="qr_type">二维码类型：</string>
    <string name="order_num">订单数量：</string>
    <string name="print_type">打印类型：</string>
    <string name="on_stock_examine">入库检验混单</string>
    <string name="out_stock_examine">出库检验混单</string>
    <string name="setting_machine_title">对应机器</string>
    <string name="setting_workgroup_title">对应工作组</string>
    <string name="setting_handler_title">操作人员</string>
    <string name="barcode">条码：</string>
    <string name="storage_bit_name">储位名称：</string>
    <string name="not_in_storage">未入：</string>
    <string name="solution_name">方案</string>
    <string name="solution_name_">方案：</string>
    <string name="package_count">总包数</string>
    <string name="storage_ok">已入</string>
    <string name="storage_no">未入</string>
    <string name="not_storage_out">未出</string>
    <string name="not_send">未发</string>
    <string name="bin_name">库位</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_submit">登录</string>
    <string name="plate_name">板件名称：</string>
    <string name="material_refer">材质：</string>
    <string name="material_refer_">材质</string>
    <string name="string_size">尺寸：</string>
    <string name="plate_no">板件号</string>
    <string name="designation">名称</string>
    <string name="remark">备注</string>
    <string name="remark_to">备注：</string>
    <string name="order_id">生产单号：</string>
    <string name="not_pack">未包件数：</string>
    <string name="not_pack_">未包</string>
    <string name="ok_pack">已包件数：</string>
    <string name="transfer_pack">转运包数：</string>
    <string name="not_transfer_pack">未转包数:</string>
    <string name="identify_qr_hint">请对准二维码开始扫描</string>
    <string name="dialog_title_hint">提示标题</string>
    <string name="dialog_content_hint">提示内容</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="login_out">退出登录</string>
    <string name="operator_refer">拆单人：</string>
    <string name="supplier_refer">供应商：</string>
    <string name="select_image">选择图片：</string>
    <string name="image_select_total">共 %d 张</string>
    <string name="image_select_all">所有图片</string>
</resources>