<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">
    <TextView
        android:id="@+id/solution_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/solution_name" />
    <TextView
        android:id="@+id/package_count"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/package_count" />
    <TextView
        android:id="@+id/not_pack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/not_pack_" />
    <TextView
        android:id="@+id/not_in_storage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/storage_no" />
    <TextView
        android:id="@+id/not_out_storage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/not_storage_out" />
    <TextView
        android:id="@+id/not_send"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/not_send" />
    <TextView
        android:id="@+id/bin_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:gravity="center"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/bin_name" />
</LinearLayout>