<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activity.ToFillInActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <include layout="@layout/title_include"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />
        <include layout="@layout/find_include"/>
    </com.google.android.material.appbar.AppBarLayout>
    <com.aige.loveproduction.ui.customui.StatusLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <com.aige.loveproduction.ui.customui.viewgroup.DampNestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">
            <RelativeLayout
                android:id="@+id/data_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/layer_shade"
                android:layout_marginBottom="100dp">
                <TextView
                    android:id="@+id/barcode_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:text="@string/plate_code"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/barcode"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/barcode_to"
                    android:layout_toEndOf="@+id/barcode_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"

                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/plate_name_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/barcode_to"
                    android:text="@string/plate_code"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/plate_name"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/plate_name_to"
                    android:layout_toEndOf="@+id/plate_name_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"

                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/materials_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/plate_name_to"
                    android:text="@string/plate_name"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/materials"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/materials_to"
                    android:layout_toEndOf="@+id/materials_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/mat_name_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/materials_to"
                    android:text="@string/mat_name"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/mat_name"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/mat_name_to"
                    android:layout_toEndOf="@+id/mat_name_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/f_leng_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/mat_name_to"
                    android:text="@string/f_leng"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/f_leng"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/f_leng_to"
                    android:layout_toEndOf="@+id/f_leng_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/f_width_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/f_leng_to"
                    android:text="@string/f_width"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/f_width"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/f_width_to"
                    android:layout_toEndOf="@+id/f_width_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/thk_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/f_width_to"
                    android:text="@string/thk"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/thk"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/thk_to"
                    android:layout_toEndOf="@+id/thk_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/area_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/thk_to"
                    android:text="@string/area"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/area_to"
                    android:layout_toEndOf="@+id/area_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/price_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/area_to"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/price_to"
                    android:layout_toEndOf="@+id/price_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/amount_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/price_to"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/amount_to"
                    android:layout_toEndOf="@+id/amount_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_enabled"/>
                <TextView
                    android:id="@+id/type_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/amount_to"
                    android:text="@string/to_fill_in_type"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/type_to"
                    android:layout_toEndOf="@+id/type_to"
                    android:background="@drawable/layer_spinner"
                    android:entries="@array/to_fill_in"
                    android:theme="@style/Spinner_text" />
                <TextView
                    android:id="@+id/cause_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/type_to"
                    android:text="@string/cause"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>

                <Spinner
                    android:id="@+id/cause"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/cause_to"
                    android:layout_toEndOf="@+id/cause_to"
                    android:background="@drawable/layer_spinner"
                    android:entries="@array/to_fill_in"
                    android:theme="@style/Spinner_text" />
                <TextView
                    android:id="@+id/discoverer_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/cause_to"
                    android:text="@string/discoverer"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/discoverer"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/discoverer_to"
                    android:layout_toEndOf="@+id/discoverer_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_while_grey_stroke"/>
                <TextView
                    android:id="@+id/post_responsibility_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/discoverer_to"
                    android:text="@string/post_responsibility"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>

                <Spinner
                    android:id="@+id/post_responsibility"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/post_responsibility_to"
                    android:layout_toEndOf="@+id/post_responsibility_to"
                    android:background="@drawable/layer_spinner"
                    android:entries="@array/post_responsibility"
                    android:theme="@style/Spinner_text" />
                <TextView
                    android:id="@+id/responsible_to"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/post_responsibility_to"
                    android:text="@string/responsible"
                    android:textColor="@color/black"
                    android:gravity="end|center_vertical"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/responsible"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/responsible_to"
                    android:layout_toEndOf="@+id/responsible_to"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_while_grey_stroke"/>
                <RelativeLayout
                    android:id="@+id/select_image_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/responsible_to">

                    <com.aige.loveproduction.ui.customui.viewgroup.WrapRecyclerView
                        android:id="@+id/select_images"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/select_image"
                        tools:layoutManager="GridLayoutManager"
                        tools:listitem="@layout/image_select_item"
                        tools:spanCount="3"
                        android:overScrollMode="never"/>
                    <TextView
                        android:id="@+id/select_image"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_alignTop="@+id/select_images"
                        android:layout_alignBottom="@+id/select_images"
                        android:gravity="end|center_vertical"
                        android:textSize="14sp"
                        android:text="@string/select_image"
                        android:textColor="@color/black" />

                </RelativeLayout>


                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="150dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:layout_below="@+id/select_image_layout"
                    android:layout_centerHorizontal="true"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:background="@drawable/ripple_button_blue" />
            </RelativeLayout>
        </com.aige.loveproduction.ui.customui.viewgroup.DampNestedScrollView>

    </com.aige.loveproduction.ui.customui.StatusLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>