<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activity.PlateFindActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <include
            layout="@layout/title_include"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_scrollFlags="scroll|enterAlways" />

        <include
            layout="@layout/find_include"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/toolbar_title" />

        <RelativeLayout
            android:id="@+id/recyclerview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_while_grey_stroke"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:id="@+id/barcode_refer"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/barcode"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/barcode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_alignBottom="@+id/barcode_refer"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/barcode_refer"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <View
                android:id="@+id/line_refer"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/barcode_refer"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/plate_name_refer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plate_name"
                android:layout_below="@+id/line_refer"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/plate_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1.6"
                android:layout_alignBottom="@+id/plate_name_refer"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/plate_name_refer"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/material_refer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="0.1"
                android:layout_alignBottom="@+id/plate_name"
                android:layout_toEndOf="@+id/plate_name"
                android:text="@string/material_refer"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1.6"
                android:layout_alignBottom="@+id/material_refer"
                android:layout_toEndOf="@+id/material_refer"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/matname_refer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="0.1"
                android:layout_below="@+id/material_refer"
                android:layout_marginTop="10dp"
                android:text="@string/mat_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/matname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1.6"
                android:layout_alignBottom="@+id/matname_refer"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/matname_refer"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/size_refer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="0.1"
                android:layout_below="@+id/plate_name"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/matname"
                android:text="@string/string_size"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1.6"
                android:layout_alignBottom="@+id/size_refer"
                android:layout_toEndOf="@+id/size_refer"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/operator_refer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1.6"
                android:layout_below="@+id/matname"
                android:layout_marginTop="10dp"
                android:text="@string/operator_refer"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1.6"
                android:layout_alignBottom="@+id/operator_refer"
                android:layout_toEndOf="@+id/operator_refer"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/supplier_refer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="0.1"
                android:layout_below="@+id/matname"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/operator"
                android:text="@string/supplier_refer"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1.6"
                android:layout_alignBottom="@+id/supplier_refer"
                android:layout_toEndOf="@+id/supplier_refer"
                android:textColor="@color/black" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.aige.loveproduction.ui.customui.StatusLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
        <com.aige.loveproduction.ui.customui.viewgroup.DampNestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">
            <include layout="@layout/recyclerview_data_include"/>
        </com.aige.loveproduction.ui.customui.viewgroup.DampNestedScrollView>


    </com.aige.loveproduction.ui.customui.StatusLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>